syntax = "proto3";

package grpc.health.v1;
option go_package = "github.com/butterv/twirp-sample/app/gen/go/v1/user";

import "google/api/annotations.proto";
// import "validate/validate.proto";

service Users {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/users/{user_id}"
        };
    }
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/user"
            body: "*"
        };
    }
}

message User {
    string user_id = 1;
    string email = 2;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetUsersRequest {
    repeated string user_ids = 1;
}

message GetUsersResponse {
    repeated User users = 1;
}

message CreateUserRequest {
    string email = 1;
}

message CreateUserResponse {
    string user_id = 1;
}
